2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Add default_toolchain_config variable.
	* build-all.sh: Do not set TOOLCHAIN_CONFIG by default.
	* tag-release.sh: Create toolchain config for created release.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* tag-release.sh: Do not push tags.
	* push-release.sh: New file.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Do not list git branches in it.
	* build-all.sh: Add --checkout-config option
	* config/arc-2014.08.sh: 2014.08 release tags.
	* config/arc-2014.12.sh: 2014.12 release tags.
	* config/arc-dev.sh: Git development branches.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Do not build unified source tree.
	* build-uclibc: Remove mentions of unified source tree.
	* symlink-all.sh: Remove.
	* README.md: No unified source tree anymore.
	* Makefile.release: No need to build unisrc.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-init.sh: Common build functions for uClibc tools.
	* build-uclibc.sh: Build without unified source tree.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-init.sh: Common build functions.
	* build-elf32.sh: Build without unified source tree.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* doc/build.md: New file.

2015-02-26  Andrew Burgess  <andrew.burgess@embecosm.com>

	* arc-init.sh (temp_file_in_dir): New function.
	* build-uclibc.sh: Use temp_file_in_dir instead of mktemp.

2015-02-24  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-uclibc.sh: Switch on UCLIBC_HAS_THREADS_NATIVE and turn
	off LINUXTHREADS_OLD when building with TLS support.

2015-02-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-uclibc.sh: Create a temporary defconfig file, edit the
	temporary file, then create the .config file.

2015-02-19  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-uclibc.sh: Remove use of arc_config.
