@@ -1,3 +1,9 @@
+2015-02-27  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* build-all.sh: Remove --force option.
+	* build-elf32.sh: Likewise.
+	* build-uclibc.sh: Likewise.
+
 2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* arc-versions.sh: Add default_toolchain_config variable.
